--- a/PositionIn/Onboarding/Onboarding.storyboard
+++ b/PositionIn/Onboarding/Onboarding.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EQ9-4A-h3E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EQ9-4A-h3E">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -54,7 +54,7 @@
                     <navigationItem key="navigationItem" title="Phone Verification" id="Iko-Vc-aUZ">
                         <barButtonItem key="rightBarButtonItem" title="Done" id="s5f-jO-1B8">
                             <connections>
-                                <action selector="doneButtonPressed:" destination="IZ8-El-dW0" id="dVe-GY-cci"/>
+                                <action selector="doneButtonPressed" destination="IZ8-El-dW0" id="2wu-e0-SCT"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
